ohhh this shit is work!

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,23 +7,25 @@
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
-  <link rel="stylesheet" media="screen" href="css/main.css">
+  <!-- <link rel="stylesheet" media="screen" href="css/main.css"> -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   
 </head>
 <body>
 <div class="contacts">
-	<a href="https://google.com" class="fa fa-github"></a>
-	<a href="https://google.com" class="fa fa-twitter"></a>
-	<a href="https://google.com" class="fa fa-facebook"></a>
+	<a href="https://www.linkedin.com/in/%D1%81%D0%B5%D1%80%D0%B3%D0%B5%D0%B9-%D0%BA%D1%83%D1%80%D0%B1%D0%B0%D0%BD%D0%BE%D0%B2-3bbb6165/" class="fa fa-linkedin"></a>
+	<a href="https://github.com/cnolick" class="fa fa-github"></a>
+	<a href="https://twitter.com/cnolick" class="fa fa-twitter"></a>
+	<a href="https://www.facebook.com/sergey.kurbanov.54" class="fa fa-facebook"></a>
+
 </div>
 
 
 <!-- particles.js container -->
 <div id="particles-js"></div>
 <div class="name">
-	<center><h1>Jane Doe</h1></center>
+	<center><h1>Sergey Kurbanov</h1></center>
 </div>
 
 	
