Well I forget change name...

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Doe | infobra.ru</title>
+  <title>Sergey Kurbanov | infobra.ru</title>
   <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -34,7 +34,7 @@
 
 
 <!-- scripts -->
-<script src="../particles.js"></script>
+<script src="particles.js"></script>
 <script src="js/app.js"></script>
 
 <!-- stats.js -->
